# MeshVision

./: CMakeLists.txt  README.md  mesh-network.service  meshvision.desktop  meshvision.service  meshvision.toml  setup-batman.sh  setup.sh  start_meshvision.sh
include/: batman.h  view.h
src/: batman.c  main.c  sink.c  view.c
